Embed Google Maps in новий 1.html
Added an iframe to embed Google Maps in the HTML file.

--- a/новий 1.html
+++ b/новий 1.html
@@ -9,11 +9,7 @@
 	<title>Кметюк Данило </title>
 
   </head>
-
-  <body>
-
-	<h1>Моя перша сторінка</h1>
-
-  </body>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d10492.964646337361!2d26.84816105167411!3d48.891740981652475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!3e6!4m3!3m2!1d48.897214!2d26.852363099999998!4m3!3m2!1d48.8857864!2d26.8531141!5e0!3m2!1suk!2sua!4v1764668698081!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </html>
+
