Refactor HTML structure and add body content
Added body section and structured HTML properly.

--- a/новий 1.html
+++ b/новий 1.html
@@ -8,13 +8,18 @@
 
 	<title>Кметюк Данило </title>
 
-		<a href="https://maps.app.goo.gl/qhjRXftxB3MisinRA" target="_blank" rel="noopener noreferrer">
-    Переглянути маршрут на Google Maps
-</a>
-
   </head>
+
+  <body>
+    <a href="https://maps.app.goo.gl/qhjRXftxB3MisinRA"
+       target="_blank"
+       rel="noopener noreferrer">
+        Переглянути маршрут на Google Maps
+    </a>
+</body>
  
 </html>
+
 
 
 
